// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should render correctly with custom props 1`] = `
<span
  class="StyledText-c4xq8q-0 dhJwFL"
  color="primary"
>
  children
</span>
`;

exports[`<Text /> should render correctly with default props 1`] = `
<span
  class="StyledText-c4xq8q-0 lNzUf"
  color="neutral"
>
  children
</span>
`;
